[gd_scene load_steps=6 format=2]

[ext_resource path="res://Nodes/Scenes/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Sprites/ui_buttons1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/ui_buttons_selected1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/ui_buttons3.png" type="Texture" id=4]
[ext_resource path="res://Sprites/ui_buttons_selected3.png" type="Texture" id=5]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 320.0
margin_bottom = 180.0
color = Color( 0.364706, 0.294118, 0.501961, 0.411765 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 320.0
margin_bottom = 180.0
__meta__ = {
"_edit_group_": true
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_right = 320.0
margin_bottom = 180.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
margin_left = 128.0
margin_top = 65.0
margin_right = 192.0
margin_bottom = 115.0

[node name="TextureButton" type="TextureButton" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 64.0
margin_bottom = 23.0
texture_normal = ExtResource( 2 )
texture_focused = ExtResource( 3 )

[node name="TextureButton2" type="TextureButton" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 27.0
margin_right = 64.0
margin_bottom = 50.0
texture_normal = ExtResource( 4 )
texture_focused = ExtResource( 5 )
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/TextureButton" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/TextureButton2" to="." method="_on_exit_pressed"]
